[package]
name = "ethrust"
version = "0.1.0"
edition = "2021"
author = "Your Name"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ethers = { version = "2.0", features = ["rustls"] }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1", features = ["macros"] }
# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
eyre = "0.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
tiny-bip39 = "1.0.0"
rand = "0.8.5"
bip32 = "0.5.1"
eth2 = "0.0.1"
csv = "1.2.2"
rand_core = "0.6.4"
secp256k1 = "0.27.0"
sha3 = "0.10.8"
rayon = "1.7.0"
bitcoin = "0.30.1"
eth-keystore = "0.5.0"
hex = "0.4.3"
colored = "2.0.4"

[profile.release]
debug = true

